[project]
name = "acornapi"
version = "0.1.0"
dependencies = [
    "undetected_chromedriver >= 3.5.5",
    "setuptools >= 80.9.0"
]
authors = [
  { name="Mustafa Motiwala", email="mustaf.motiwala@utoronto.ca" },
]
description = "A library to interface with ACORN programmatically."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/motiwalam/uoft_acornapi"
Issues = "https://github.com/motiwalam/uoft_acornapi/issues"

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"